# SigMe

./: .gitignore  .gitmodules  CMakeLists.txt  SigMe.sln  SigMe.vcxproj  SigMe.vcxproj.filters
.github/workflows/: build.yml
Src/: Plugin.cpp  Scanner.cpp  Scanner.h  SymbolPatterns.cpp  SymbolPatterns.h
